--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html>
 	<head>
 		<title>First</title>
+		<script src="https://fb.me/react-15.2.1.min.js"></script>
+		<script src="https://fb.me/react-dom-15.2.1.min.js"></script>
 	</head>
 	<body>
-		About
+		Sobre
 	</body>
 </html>
