--- a/index.html
+++ b/index.html
@@ -1,11 +1,43 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<meta charset="UTF-8"/>
 		<title>First</title>
 		<script src="https://fb.me/react-15.2.1.min.js"></script>
 		<script src="https://fb.me/react-dom-15.2.1.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.34/browser.min.js"></script>
+		<script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
+		
 	</head>
 	<body>
-		Sobre
+		<div id="conteudo"></div>
+		<script type="text/babel">
+			var data = [
+			{"id": 1, "nome": "Pedro", "conteudo": "Comentário 1"} , 
+			{"id": 2, "nome": "Jao", "conteudo": "Comentário 2"}
+			];
+			
+			var Comentario = React.createClass({
+				render: function() {
+					return <div>({this.props.cid}) Nome: {this.props.nome} Conteudo: {this.props.children}</div>;
+				}
+			});
+			
+			var Comentarios = React.createClass({
+				render: function() {
+					var ret = this.props.data.map(function (com) {
+					return <Comentario cid={com.id} nome={com.nome}>
+					{com.conteudo}
+					</Comentario>;
+					});
+					return <div>{ret}</div>;
+				}
+			});
+			
+			ReactDOM.render(
+				<Comentarios data={data}/>,
+				document.getElementById("conteudo")
+			);
+		</script>
 	</body>
 </html>
