--- a/index.html
+++ b/index.html
@@ -3,61 +3,9 @@
 	<head>
 		<meta charset="UTF-8"/>
 		<title>First</title>
-		<script src="build/react.js"></script>
-    	<script src="build/react-dom.js"></script>
-    	<script src="build/ReactRouter.js"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.34/browser.min.js"></script>
-		<script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
-	</head>
+		<link rel="stylesheet" type="text/css" href="style/style.css"/>
 	<body>
-		<div id="conteudo"></div>
-		<script type="text/babel">
-		var ReactRouter = window.ReactRouter;
-		var Router = ReactRouter.Router;
-		var Route = ReactRouter.Route;
-		var Link = ReactRouter.Link;
-
-			var data = [
-			{"id": 1, "nome": "Pedro", "conteudo": "Comentário 1"} , 
-			{"id": 2, "nome": "Jao", "conteudo": "Comentário 2"}
-			];
-			
-			var Comentario = React.createClass({
-				render: function() {
-					return <div key="{this.props.cid}" className="comentario">Nome: {this.props.nome} Conteudo: {this.props.children}</div>;
-				}
-			});
-			
-			var Comentarios = React.createClass({
-				render: function() {
-					var ret = this.props.data.map(function (com) {
-						return <Comentario key={com.id} nome={com.nome}>
-						{com.conteudo}
-						</Comentario>;
-					});
-					return <div className="comentarios">{ret}</div>;
-				}
-			});
-
-			var Home = React.createClass({
-				render: function() {
-					return <Comentarios data={data}/>;
-				}
-			})
-
-			var About = React.createClass({
-				render: function() {
-					return <div>Sobre</div>;
-				}
-			});
-			
-			ReactDOM.render((
-				<Router>
-					<Route path="/" component={Home}/>
-					<Route path="/about" component={About}/>
-				</Router>),
-				document.getElementById("conteudo")
-			);
-		</script>
+		<div id="app"></div>
+		<script src="bundle.js"></script>
 	</body>
 </html>
